# uma-advanced-robotics

01_waypoint_navigation/: README.md
01_waypoint_navigation/seg_tray/: package.xml
01_waypoint_navigation/seg_tray/scenes/: p2p_scene.ttt
02_pure_pursuit_navigation/seg_tray/scenes/: nova_carter_pure_pursuit.usd
03_environment_perception/: README.md
03_environment_perception/seg_tray/: CMakeLists.txt  package.xml
03_environment_perception/seg_tray/launch/: corr_nav_wall_launch.py
03_environment_perception/seg_tray/scenes/: corridor_scene.ttt
03_environment_perception/seg_tray/src/: corr_nav_wall.cpp
04_potential_fields/: potential_fields_navigation.m
05_dijkstra/: dijkstra.m
pure_pursuit_navigation/: README.md
pure_pursuit_navigation/seg_tray/: CMakeLists.txt
pure_pursuit_navigation/seg_tray/config/: corr_params.yaml
pure_pursuit_navigation/seg_tray/src/: corr_nav.cpp
waypoint_navigation/: README.md
waypoint_navigation/seg_tray/: CMakeLists.txt
waypoint_navigation/seg_tray/config/: nav_params.yaml
waypoint_navigation/seg_tray/scenes/: nova_carter_waypoint.usd
waypoint_navigation/seg_tray/src/: nav_p2p.cpp
