<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seg_tray</name>
  <version>1.0.0</version>
  <description>Point-to-point navigation and control loop for Pioneer 3DX differential drive robot.</description>
  
  <author email="rvmartin@uma.es">Ricardo</author>
  
  <maintainer email="bonilla.navarro.jorge@gmail.com">Jorge</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>